...
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

...
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/material_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pokemom"
        android:text="@string/login"
        android:textAllCaps="false"
...
